kubernetes/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: hub-website
  labels:
    app: hub-website
spec:
  selector:
    app: hub-website
  ports:
  - name: http
    port: 80
    protocol: TCP
